# open-meteo-test

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  env_sample  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
src/: manage.py  urls.py
src/apps/base/api/: mixins.py
src/apps/meteo/: conftest.py  exceptions.py  managers.py
src/apps/meteo/api/: filters.py  serializers.py  urls.py  views.py
src/apps/meteo/management/commands/: weather.py
src/apps/meteo/migrations/: 0001_initial.py  0002_alter_weather_forecast_alter_weather_measured_and_more.py
src/apps/meteo/models/: __init__.py  cities.py  weather.py
src/apps/meteo/services/: __init__.py  open_meteo.py  save_in_file.py
src/apps/meteo/tests/: conftest.py  test_api_get_weather.py  test_api_get_weather_difference.py  test_weather_command.py
src/apps/meteo/tests/api/: test_get_weather_difference.py
src/settings/: __init__.py  local.py  spectacular.py  test.py
